--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <resources>
 
     <!--Common start-->
-    <string name="app_name">QQ音乐</string>
+    <string name="app_name">XIEZHENQI</string>
     <string name="cd_search">搜索</string>
     <string name="cd_clear">清除</string>
     <string name="menu_search">搜索</string>
+    <string name="cancel">取消</string>
+    <string name="confirm">确定</string>
     <!--Common end-->
 
     <!--MusicPavilionFragment start-->
@@ -28,8 +30,6 @@
     <string name="search_content_hint">请输入歌手名/歌名</string>
     <string name="search_cd_back_top">回到顶部</string>
     <string name="search_toast">请输入搜索内容</string>
-    <string name="cancel">取消</string>
-    <string name="confirm">确定</string>
     <!--SearchSongActivity end-->
 
     <string-array name="singer_list">
