--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,5 +68,17 @@
         <item>因为爱所以爱</item>
         <item>她说</item>
         <item>关于郑州的记忆</item>
+        <item>别怕我伤心</item>
+        <item>北京北京</item>
+        <item>卜卦</item>
+        <item>背对背拥抱</item>
+        <item>丑八怪</item>
+        <item>虫儿飞</item>
+        <item>车站</item>
+        <item>Diamonds</item>
+        <item>大桥上</item>
+        <item>父亲</item>
+        <item>关不上的窗</item>
+        <item>过火</item>
     </string-array>
 </resources>
