--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,6 +84,9 @@
     <string name="title_activity_toast">ToastActivity</string>
 
     <!--permission name start-->
+    <string name="permission_title">%1$s权限申请</string>
+    <string name="permission_description">请在"设置-应用-本地网-权限管理"中开启%1$s权限，开启后，%2$s</string>
+
     <string name="permission_name_calendar">日历</string>
     <string name="permission_name_camera">相机</string>
     <string name="permission_name_contacts">通讯录</string>
